<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <Button
        android:id="@+id/btn_back4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="#ffff"/>

    <TextView
        android:id="@+id/tv_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_password_question"
        android:layout_below="@id/btn_back4"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_9"
        android:text="@string/hint5"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_10"
        android:text="@string/password_question"
        android:layout_marginTop="60dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et_find_password_input_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_11"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="text"
        android:hint="@string/input_answer"
        android:background="#E1DCDC"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_find_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_find_password_input_answer"
        android:text="@string/confirm"
        android:layout_marginTop="60dp"/>

</RelativeLayout>