<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="#ffff"/>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_login_interface"
        android:layout_below="@id/btn_back"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_3"
        android:layout_marginTop="100dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="text"
        android:autofillHints="username"
        android:hint="@string/input_username"
        android:background="#E1DCDC"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/et_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_2"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/input_password"
        android:background="#E1DCDC"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_3"
        android:layout_marginTop="60dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_other_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/other_login"
        android:textColor="#3495E3"
        android:background="#ffff"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_toEndOf="@id/btn_other_login"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        android:background="#ffff"
        android:layout_marginStart="170dp"/>

</RelativeLayout>