<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <Button
        android:id="@+id/btn_back5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="#ffff"/>

    <TextView
        android:id="@+id/tv_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_below="@id/btn_back5"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_12"
        android:text="@string/hint6"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_13"
        android:layout_marginTop="60dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:background="#E1DCDC"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_reset_password_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reset_password"
        android:text="@string/finish"
        android:layout_marginTop="60dp"/>

</RelativeLayout>