<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <Button
        android:id="@+id/btn_back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="#ffff"/>

    <TextView
        android:id="@+id/tv_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_password"
        android:layout_below="@id/btn_back3"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_7"
        android:text="@string/hint4"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_find_password_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_8"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="text"
        android:hint="@string/input_username"
        android:background="#E1DCDC"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_find_password_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_find_password_input_username"
        android:text="@string/next"
        android:layout_marginTop="60dp"/>

</RelativeLayout>