<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="#ffff"/>

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_back2"
            android:layout_marginTop="60dp"
            android:text="@string/user_register"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_4"
            android:layout_marginTop="60dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:inputType="text"
            android:autofillHints="register_username"
            android:hint="@string/input_username"
            android:background="#E1DCDC"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_4"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:autofillHints="register_password"
            android:hint="@string/input_password"
            android:background="#E1DCDC"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_5"
            android:text="@string/hint2"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_5"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:autofillHints="register_repeat_password"
            android:hint="@string/repeat_password"
            android:background="#E1DCDC"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_6"
            android:text="@string/hint3"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_6"
            android:text="请选择密保问题"
            android:layout_marginTop="40dp"
            android:padding="10dp"/>

        <Spinner
            android:id="@+id/spinner_password_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_14" />

        <EditText
            android:id="@+id/et_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_password_question"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:inputType="text"
            android:autofillHints="question_answer"
            android:hint="@string/input_answer"
            android:background="#E1DCDC"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_7"
            android:layout_marginTop="60dp"
            android:text="@string/register_2"/>

    </RelativeLayout>

</ScrollView>